bk_ida/gccida/c3/hash_rtx
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/hash_rtx/src/cselib.c:1024:32: error: must use 'enum' tag to refer to type 'machine_mode'
unsigned int  hash_rtx( rtx x, machine_mode mode, int create) 
                               ^
                               enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/hash_rtx/src/cselib.c:1027:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/hash_rtx/src/cselib.c:1107:5: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v20 = 0LL; 
    ^ ~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/hash_rtx/src/cselib.c:1113:5: error: assigning to '__m128i' (vector of 2 'long long' values) from incompatible type 'long long'
v20 = 0LL; 
    ^ ~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/hash_rtx/src/cselib.c:1158:34: error: use of undeclared identifier 'machine_mode'
v8 = v7 + hash_rtx( rtwint[1], ( machine_mode)*( ( unsigned __int8 *)rtwint[1] + 2), 0); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/hash_rtx/src/cselib.c:1166:30: error: use of undeclared identifier 'machine_mode'
v8 += hash_rtx( ( rtx)v36, ( machine_mode)*( unsigned __int8 *)( v36 + 2), 0); 
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/hash_rtx/src/obj/cselib.o] Error 1
